parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> port
Rule 1     port -> Inicio code Fim
Rule 2     port -> fun Inicio code Fim
Rule 3     code -> com
Rule 4     code -> code com
Rule 5     fun -> funcao varType varName ( vars ) : code fim_funcao
Rule 6     fun -> funcao void varName ( vars ) : code fim_funcao
Rule 7     vars -> <empty>
Rule 8     vars -> varType varName
Rule 9     vars -> vars , varType varName
Rule 10    com -> lines
Rule 11    com -> cond
Rule 12    com -> cycle
Rule 13    lines -> varName assign value ;
Rule 14    lines -> varType : varName_list ;
Rule 15    lines -> escreva value_list ;
Rule 16    lines -> leia value_list ;
Rule 17    lines -> retorna value ;
Rule 18    cond -> se value entao code fim_se
Rule 19    cond -> se value entao code senao code fim_se
Rule 20    cycle -> para varName de value ate value passo value faca code fim_para
Rule 21    cycle -> enquanto value_list faca code fim_enquanto
Rule 22    value -> varName
Rule 23    value -> bool
Rule 24    value -> calc
Rule 25    value -> string
Rule 26    value -> varName ( value_list )
Rule 27    value -> varName ( )
Rule 28    varType -> inteiro
Rule 29    varType -> real
Rule 30    varType -> carater
Rule 31    varType -> logico
Rule 32    varName_list -> varName
Rule 33    varName_list -> varName_list , varName
Rule 34    value_list -> value
Rule 35    value_list -> value_list , value
Rule 36    value_list -> ( value_list )
Rule 37    bool -> opt
Rule 38    bool -> value e value
Rule 39    bool -> value ou value
Rule 40    bool -> value xou value
Rule 41    calc -> int
Rule 42    calc -> float
Rule 43    calc -> - value
Rule 44    calc -> value + value
Rule 45    calc -> value - value
Rule 46    calc -> value * value
Rule 47    calc -> value / value
Rule 48    calc -> value < value
Rule 49    calc -> value > value
Rule 50    calc -> value dif value
Rule 51    calc -> value eq value
Rule 52    calc -> value maieq value
Rule 53    calc -> value meneq value
Rule 54    opt -> verdadeiro
Rule 55    opt -> falso
Rule 56    opt -> nao opt

Terminals, with rules where they appear

(                    : 5 6 26 27 36
)                    : 5 6 26 27 36
*                    : 46
+                    : 44
,                    : 9 33 35
-                    : 43 45
/                    : 47
:                    : 5 6 14
;                    : 13 14 15 16 17
<                    : 48
>                    : 49
Fim                  : 1 2
Inicio               : 1 2
assign               : 13
ate                  : 20
carater              : 30
de                   : 20
dif                  : 50
e                    : 38
enquanto             : 21
entao                : 18 19
eq                   : 51
error                : 
escreva              : 15
faca                 : 20 21
falso                : 55
fim_enquanto         : 21
fim_funcao           : 5 6
fim_para             : 20
fim_se               : 18 19
float                : 42
funcao               : 5 6
int                  : 41
inteiro              : 28
leia                 : 16
logico               : 31
maieq                : 52
meneq                : 53
nao                  : 56
ou                   : 39
para                 : 20
passo                : 20
real                 : 29
retorna              : 17
se                   : 18 19
senao                : 19
string               : 25
varName              : 5 6 8 9 13 20 22 26 27 32 33
verdadeiro           : 54
void                 : 6
xou                  : 40

Nonterminals, with rules where they appear

bool                 : 23
calc                 : 24
code                 : 1 2 4 5 6 18 19 19 20 21
com                  : 3 4
cond                 : 11
cycle                : 12
fun                  : 2
lines                : 10
opt                  : 37 56
port                 : 0
value                : 13 17 18 19 20 20 20 34 35 38 38 39 39 40 40 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53
value_list           : 15 16 21 26 35 36
varName_list         : 14 33
varType              : 5 8 9 14
vars                 : 5 6 9

Parsing method: LALR

state 0

    (0) S' -> . port
    (1) port -> . Inicio code Fim
    (2) port -> . fun Inicio code Fim
    (5) fun -> . funcao varType varName ( vars ) : code fim_funcao
    (6) fun -> . funcao void varName ( vars ) : code fim_funcao

    Inicio          shift and go to state 2
    funcao          shift and go to state 4

    port                           shift and go to state 1
    fun                            shift and go to state 3

state 1

    (0) S' -> port .



state 2

    (1) port -> Inicio . code Fim
    (3) code -> . com
    (4) code -> . code com
    (10) com -> . lines
    (11) com -> . cond
    (12) com -> . cycle
    (13) lines -> . varName assign value ;
    (14) lines -> . varType : varName_list ;
    (15) lines -> . escreva value_list ;
    (16) lines -> . leia value_list ;
    (17) lines -> . retorna value ;
    (18) cond -> . se value entao code fim_se
    (19) cond -> . se value entao code senao code fim_se
    (20) cycle -> . para varName de value ate value passo value faca code fim_para
    (21) cycle -> . enquanto value_list faca code fim_enquanto
    (28) varType -> . inteiro
    (29) varType -> . real
    (30) varType -> . carater
    (31) varType -> . logico

    varName         shift and go to state 10
    escreva         shift and go to state 12
    leia            shift and go to state 13
    retorna         shift and go to state 14
    se              shift and go to state 15
    para            shift and go to state 16
    enquanto        shift and go to state 17
    inteiro         shift and go to state 18
    real            shift and go to state 19
    carater         shift and go to state 20
    logico          shift and go to state 21

    code                           shift and go to state 5
    com                            shift and go to state 6
    lines                          shift and go to state 7
    cond                           shift and go to state 8
    cycle                          shift and go to state 9
    varType                        shift and go to state 11

state 3

    (2) port -> fun . Inicio code Fim

    Inicio          shift and go to state 22


state 4

    (5) fun -> funcao . varType varName ( vars ) : code fim_funcao
    (6) fun -> funcao . void varName ( vars ) : code fim_funcao
    (28) varType -> . inteiro
    (29) varType -> . real
    (30) varType -> . carater
    (31) varType -> . logico

    void            shift and go to state 24
    inteiro         shift and go to state 18
    real            shift and go to state 19
    carater         shift and go to state 20
    logico          shift and go to state 21

    varType                        shift and go to state 23

state 5

    (1) port -> Inicio code . Fim
    (4) code -> code . com
    (10) com -> . lines
    (11) com -> . cond
    (12) com -> . cycle
    (13) lines -> . varName assign value ;
    (14) lines -> . varType : varName_list ;
    (15) lines -> . escreva value_list ;
    (16) lines -> . leia value_list ;
    (17) lines -> . retorna value ;
    (18) cond -> . se value entao code fim_se
    (19) cond -> . se value entao code senao code fim_se
    (20) cycle -> . para varName de value ate value passo value faca code fim_para
    (21) cycle -> . enquanto value_list faca code fim_enquanto
    (28) varType -> . inteiro
    (29) varType -> . real
    (30) varType -> . carater
    (31) varType -> . logico

    Fim             shift and go to state 25
    varName         shift and go to state 10
    escreva         shift and go to state 12
    leia            shift and go to state 13
    retorna         shift and go to state 14
    se              shift and go to state 15
    para            shift and go to state 16
    enquanto        shift and go to state 17
    inteiro         shift and go to state 18
    real            shift and go to state 19
    carater         shift and go to state 20
    logico          shift and go to state 21

    com                            shift and go to state 26
    lines                          shift and go to state 7
    cond                           shift and go to state 8
    cycle                          shift and go to state 9
    varType                        shift and go to state 11

state 6

    (3) code -> com .

    Fim             reduce using rule 3 (code -> com .)
    varName         reduce using rule 3 (code -> com .)
    escreva         reduce using rule 3 (code -> com .)
    leia            reduce using rule 3 (code -> com .)
    retorna         reduce using rule 3 (code -> com .)
    se              reduce using rule 3 (code -> com .)
    para            reduce using rule 3 (code -> com .)
    enquanto        reduce using rule 3 (code -> com .)
    inteiro         reduce using rule 3 (code -> com .)
    real            reduce using rule 3 (code -> com .)
    carater         reduce using rule 3 (code -> com .)
    logico          reduce using rule 3 (code -> com .)
    fim_se          reduce using rule 3 (code -> com .)
    senao           reduce using rule 3 (code -> com .)
    fim_enquanto    reduce using rule 3 (code -> com .)
    fim_funcao      reduce using rule 3 (code -> com .)
    fim_para        reduce using rule 3 (code -> com .)


state 7

    (10) com -> lines .

    Fim             reduce using rule 10 (com -> lines .)
    varName         reduce using rule 10 (com -> lines .)
    escreva         reduce using rule 10 (com -> lines .)
    leia            reduce using rule 10 (com -> lines .)
    retorna         reduce using rule 10 (com -> lines .)
    se              reduce using rule 10 (com -> lines .)
    para            reduce using rule 10 (com -> lines .)
    enquanto        reduce using rule 10 (com -> lines .)
    inteiro         reduce using rule 10 (com -> lines .)
    real            reduce using rule 10 (com -> lines .)
    carater         reduce using rule 10 (com -> lines .)
    logico          reduce using rule 10 (com -> lines .)
    fim_se          reduce using rule 10 (com -> lines .)
    senao           reduce using rule 10 (com -> lines .)
    fim_enquanto    reduce using rule 10 (com -> lines .)
    fim_funcao      reduce using rule 10 (com -> lines .)
    fim_para        reduce using rule 10 (com -> lines .)


state 8

    (11) com -> cond .

    Fim             reduce using rule 11 (com -> cond .)
    varName         reduce using rule 11 (com -> cond .)
    escreva         reduce using rule 11 (com -> cond .)
    leia            reduce using rule 11 (com -> cond .)
    retorna         reduce using rule 11 (com -> cond .)
    se              reduce using rule 11 (com -> cond .)
    para            reduce using rule 11 (com -> cond .)
    enquanto        reduce using rule 11 (com -> cond .)
    inteiro         reduce using rule 11 (com -> cond .)
    real            reduce using rule 11 (com -> cond .)
    carater         reduce using rule 11 (com -> cond .)
    logico          reduce using rule 11 (com -> cond .)
    fim_se          reduce using rule 11 (com -> cond .)
    senao           reduce using rule 11 (com -> cond .)
    fim_enquanto    reduce using rule 11 (com -> cond .)
    fim_funcao      reduce using rule 11 (com -> cond .)
    fim_para        reduce using rule 11 (com -> cond .)


state 9

    (12) com -> cycle .

    Fim             reduce using rule 12 (com -> cycle .)
    varName         reduce using rule 12 (com -> cycle .)
    escreva         reduce using rule 12 (com -> cycle .)
    leia            reduce using rule 12 (com -> cycle .)
    retorna         reduce using rule 12 (com -> cycle .)
    se              reduce using rule 12 (com -> cycle .)
    para            reduce using rule 12 (com -> cycle .)
    enquanto        reduce using rule 12 (com -> cycle .)
    inteiro         reduce using rule 12 (com -> cycle .)
    real            reduce using rule 12 (com -> cycle .)
    carater         reduce using rule 12 (com -> cycle .)
    logico          reduce using rule 12 (com -> cycle .)
    fim_se          reduce using rule 12 (com -> cycle .)
    senao           reduce using rule 12 (com -> cycle .)
    fim_enquanto    reduce using rule 12 (com -> cycle .)
    fim_funcao      reduce using rule 12 (com -> cycle .)
    fim_para        reduce using rule 12 (com -> cycle .)


state 10

    (13) lines -> varName . assign value ;

    assign          shift and go to state 27


state 11

    (14) lines -> varType . : varName_list ;

    :               shift and go to state 28


state 12

    (15) lines -> escreva . value_list ;
    (34) value_list -> . value
    (35) value_list -> . value_list , value
    (36) value_list -> . ( value_list )
    (22) value -> . varName
    (23) value -> . bool
    (24) value -> . calc
    (25) value -> . string
    (26) value -> . varName ( value_list )
    (27) value -> . varName ( )
    (37) bool -> . opt
    (38) bool -> . value e value
    (39) bool -> . value ou value
    (40) bool -> . value xou value
    (41) calc -> . int
    (42) calc -> . float
    (43) calc -> . - value
    (44) calc -> . value + value
    (45) calc -> . value - value
    (46) calc -> . value * value
    (47) calc -> . value / value
    (48) calc -> . value < value
    (49) calc -> . value > value
    (50) calc -> . value dif value
    (51) calc -> . value eq value
    (52) calc -> . value maieq value
    (53) calc -> . value meneq value
    (54) opt -> . verdadeiro
    (55) opt -> . falso
    (56) opt -> . nao opt

    (               shift and go to state 31
    varName         shift and go to state 32
    string          shift and go to state 35
    int             shift and go to state 37
    float           shift and go to state 38
    -               shift and go to state 39
    verdadeiro      shift and go to state 40
    falso           shift and go to state 41
    nao             shift and go to state 42

    value_list                     shift and go to state 29
    value                          shift and go to state 30
    bool                           shift and go to state 33
    calc                           shift and go to state 34
    opt                            shift and go to state 36

state 13

    (16) lines -> leia . value_list ;
    (34) value_list -> . value
    (35) value_list -> . value_list , value
    (36) value_list -> . ( value_list )
    (22) value -> . varName
    (23) value -> . bool
    (24) value -> . calc
    (25) value -> . string
    (26) value -> . varName ( value_list )
    (27) value -> . varName ( )
    (37) bool -> . opt
    (38) bool -> . value e value
    (39) bool -> . value ou value
    (40) bool -> . value xou value
    (41) calc -> . int
    (42) calc -> . float
    (43) calc -> . - value
    (44) calc -> . value + value
    (45) calc -> . value - value
    (46) calc -> . value * value
    (47) calc -> . value / value
    (48) calc -> . value < value
    (49) calc -> . value > value
    (50) calc -> . value dif value
    (51) calc -> . value eq value
    (52) calc -> . value maieq value
    (53) calc -> . value meneq value
    (54) opt -> . verdadeiro
    (55) opt -> . falso
    (56) opt -> . nao opt

    (               shift and go to state 31
    varName         shift and go to state 32
    string          shift and go to state 35
    int             shift and go to state 37
    float           shift and go to state 38
    -               shift and go to state 39
    verdadeiro      shift and go to state 40
    falso           shift and go to state 41
    nao             shift and go to state 42

    value_list                     shift and go to state 43
    value                          shift and go to state 30
    bool                           shift and go to state 33
    calc                           shift and go to state 34
    opt                            shift and go to state 36

state 14

    (17) lines -> retorna . value ;
    (22) value -> . varName
    (23) value -> . bool
    (24) value -> . calc
    (25) value -> . string
    (26) value -> . varName ( value_list )
    (27) value -> . varName ( )
    (37) bool -> . opt
    (38) bool -> . value e value
    (39) bool -> . value ou value
    (40) bool -> . value xou value
    (41) calc -> . int
    (42) calc -> . float
    (43) calc -> . - value
    (44) calc -> . value + value
    (45) calc -> . value - value
    (46) calc -> . value * value
    (47) calc -> . value / value
    (48) calc -> . value < value
    (49) calc -> . value > value
    (50) calc -> . value dif value
    (51) calc -> . value eq value
    (52) calc -> . value maieq value
    (53) calc -> . value meneq value
    (54) opt -> . verdadeiro
    (55) opt -> . falso
    (56) opt -> . nao opt

    varName         shift and go to state 32
    string          shift and go to state 35
    int             shift and go to state 37
    float           shift and go to state 38
    -               shift and go to state 39
    verdadeiro      shift and go to state 40
    falso           shift and go to state 41
    nao             shift and go to state 42

    value                          shift and go to state 44
    bool                           shift and go to state 33
    calc                           shift and go to state 34
    opt                            shift and go to state 36

state 15

    (18) cond -> se . value entao code fim_se
    (19) cond -> se . value entao code senao code fim_se
    (22) value -> . varName
    (23) value -> . bool
    (24) value -> . calc
    (25) value -> . string
    (26) value -> . varName ( value_list )
    (27) value -> . varName ( )
    (37) bool -> . opt
    (38) bool -> . value e value
    (39) bool -> . value ou value
    (40) bool -> . value xou value
    (41) calc -> . int
    (42) calc -> . float
    (43) calc -> . - value
    (44) calc -> . value + value
    (45) calc -> . value - value
    (46) calc -> . value * value
    (47) calc -> . value / value
    (48) calc -> . value < value
    (49) calc -> . value > value
    (50) calc -> . value dif value
    (51) calc -> . value eq value
    (52) calc -> . value maieq value
    (53) calc -> . value meneq value
    (54) opt -> . verdadeiro
    (55) opt -> . falso
    (56) opt -> . nao opt

    varName         shift and go to state 32
    string          shift and go to state 35
    int             shift and go to state 37
    float           shift and go to state 38
    -               shift and go to state 39
    verdadeiro      shift and go to state 40
    falso           shift and go to state 41
    nao             shift and go to state 42

    value                          shift and go to state 45
    bool                           shift and go to state 33
    calc                           shift and go to state 34
    opt                            shift and go to state 36

state 16

    (20) cycle -> para . varName de value ate value passo value faca code fim_para

    varName         shift and go to state 46


state 17

    (21) cycle -> enquanto . value_list faca code fim_enquanto
    (34) value_list -> . value
    (35) value_list -> . value_list , value
    (36) value_list -> . ( value_list )
    (22) value -> . varName
    (23) value -> . bool
    (24) value -> . calc
    (25) value -> . string
    (26) value -> . varName ( value_list )
    (27) value -> . varName ( )
    (37) bool -> . opt
    (38) bool -> . value e value
    (39) bool -> . value ou value
    (40) bool -> . value xou value
    (41) calc -> . int
    (42) calc -> . float
    (43) calc -> . - value
    (44) calc -> . value + value
    (45) calc -> . value - value
    (46) calc -> . value * value
    (47) calc -> . value / value
    (48) calc -> . value < value
    (49) calc -> . value > value
    (50) calc -> . value dif value
    (51) calc -> . value eq value
    (52) calc -> . value maieq value
    (53) calc -> . value meneq value
    (54) opt -> . verdadeiro
    (55) opt -> . falso
    (56) opt -> . nao opt

    (               shift and go to state 31
    varName         shift and go to state 32
    string          shift and go to state 35
    int             shift and go to state 37
    float           shift and go to state 38
    -               shift and go to state 39
    verdadeiro      shift and go to state 40
    falso           shift and go to state 41
    nao             shift and go to state 42

    value_list                     shift and go to state 47
    value                          shift and go to state 30
    bool                           shift and go to state 33
    calc                           shift and go to state 34
    opt                            shift and go to state 36

state 18

    (28) varType -> inteiro .

    :               reduce using rule 28 (varType -> inteiro .)
    varName         reduce using rule 28 (varType -> inteiro .)


state 19

    (29) varType -> real .

    :               reduce using rule 29 (varType -> real .)
    varName         reduce using rule 29 (varType -> real .)


state 20

    (30) varType -> carater .

    :               reduce using rule 30 (varType -> carater .)
    varName         reduce using rule 30 (varType -> carater .)


state 21

    (31) varType -> logico .

    :               reduce using rule 31 (varType -> logico .)
    varName         reduce using rule 31 (varType -> logico .)


state 22

    (2) port -> fun Inicio . code Fim
    (3) code -> . com
    (4) code -> . code com
    (10) com -> . lines
    (11) com -> . cond
    (12) com -> . cycle
    (13) lines -> . varName assign value ;
    (14) lines -> . varType : varName_list ;
    (15) lines -> . escreva value_list ;
    (16) lines -> . leia value_list ;
    (17) lines -> . retorna value ;
    (18) cond -> . se value entao code fim_se
    (19) cond -> . se value entao code senao code fim_se
    (20) cycle -> . para varName de value ate value passo value faca code fim_para
    (21) cycle -> . enquanto value_list faca code fim_enquanto
    (28) varType -> . inteiro
    (29) varType -> . real
    (30) varType -> . carater
    (31) varType -> . logico

    varName         shift and go to state 10
    escreva         shift and go to state 12
    leia            shift and go to state 13
    retorna         shift and go to state 14
    se              shift and go to state 15
    para            shift and go to state 16
    enquanto        shift and go to state 17
    inteiro         shift and go to state 18
    real            shift and go to state 19
    carater         shift and go to state 20
    logico          shift and go to state 21

    code                           shift and go to state 48
    com                            shift and go to state 6
    lines                          shift and go to state 7
    cond                           shift and go to state 8
    cycle                          shift and go to state 9
    varType                        shift and go to state 11

state 23

    (5) fun -> funcao varType . varName ( vars ) : code fim_funcao

    varName         shift and go to state 49


state 24

    (6) fun -> funcao void . varName ( vars ) : code fim_funcao

    varName         shift and go to state 50


state 25

    (1) port -> Inicio code Fim .

    $end            reduce using rule 1 (port -> Inicio code Fim .)


state 26

    (4) code -> code com .

    Fim             reduce using rule 4 (code -> code com .)
    varName         reduce using rule 4 (code -> code com .)
    escreva         reduce using rule 4 (code -> code com .)
    leia            reduce using rule 4 (code -> code com .)
    retorna         reduce using rule 4 (code -> code com .)
    se              reduce using rule 4 (code -> code com .)
    para            reduce using rule 4 (code -> code com .)
    enquanto        reduce using rule 4 (code -> code com .)
    inteiro         reduce using rule 4 (code -> code com .)
    real            reduce using rule 4 (code -> code com .)
    carater         reduce using rule 4 (code -> code com .)
    logico          reduce using rule 4 (code -> code com .)
    fim_se          reduce using rule 4 (code -> code com .)
    senao           reduce using rule 4 (code -> code com .)
    fim_enquanto    reduce using rule 4 (code -> code com .)
    fim_funcao      reduce using rule 4 (code -> code com .)
    fim_para        reduce using rule 4 (code -> code com .)


state 27

    (13) lines -> varName assign . value ;
    (22) value -> . varName
    (23) value -> . bool
    (24) value -> . calc
    (25) value -> . string
    (26) value -> . varName ( value_list )
    (27) value -> . varName ( )
    (37) bool -> . opt
    (38) bool -> . value e value
    (39) bool -> . value ou value
    (40) bool -> . value xou value
    (41) calc -> . int
    (42) calc -> . float
    (43) calc -> . - value
    (44) calc -> . value + value
    (45) calc -> . value - value
    (46) calc -> . value * value
    (47) calc -> . value / value
    (48) calc -> . value < value
    (49) calc -> . value > value
    (50) calc -> . value dif value
    (51) calc -> . value eq value
    (52) calc -> . value maieq value
    (53) calc -> . value meneq value
    (54) opt -> . verdadeiro
    (55) opt -> . falso
    (56) opt -> . nao opt

    varName         shift and go to state 32
    string          shift and go to state 35
    int             shift and go to state 37
    float           shift and go to state 38
    -               shift and go to state 39
    verdadeiro      shift and go to state 40
    falso           shift and go to state 41
    nao             shift and go to state 42

    value                          shift and go to state 51
    bool                           shift and go to state 33
    calc                           shift and go to state 34
    opt                            shift and go to state 36

state 28

    (14) lines -> varType : . varName_list ;
    (32) varName_list -> . varName
    (33) varName_list -> . varName_list , varName

    varName         shift and go to state 53

    varName_list                   shift and go to state 52

state 29

    (15) lines -> escreva value_list . ;
    (35) value_list -> value_list . , value

    ;               shift and go to state 54
    ,               shift and go to state 55


state 30

    (34) value_list -> value .
    (38) bool -> value . e value
    (39) bool -> value . ou value
    (40) bool -> value . xou value
    (44) calc -> value . + value
    (45) calc -> value . - value
    (46) calc -> value . * value
    (47) calc -> value . / value
    (48) calc -> value . < value
    (49) calc -> value . > value
    (50) calc -> value . dif value
    (51) calc -> value . eq value
    (52) calc -> value . maieq value
    (53) calc -> value . meneq value

    ;               reduce using rule 34 (value_list -> value .)
    ,               reduce using rule 34 (value_list -> value .)
    faca            reduce using rule 34 (value_list -> value .)
    )               reduce using rule 34 (value_list -> value .)
    e               shift and go to state 56
    ou              shift and go to state 57
    xou             shift and go to state 58
    +               shift and go to state 59
    -               shift and go to state 60
    *               shift and go to state 61
    /               shift and go to state 62
    <               shift and go to state 63
    >               shift and go to state 64
    dif             shift and go to state 65
    eq              shift and go to state 66
    maieq           shift and go to state 67
    meneq           shift and go to state 68


state 31

    (36) value_list -> ( . value_list )
    (34) value_list -> . value
    (35) value_list -> . value_list , value
    (36) value_list -> . ( value_list )
    (22) value -> . varName
    (23) value -> . bool
    (24) value -> . calc
    (25) value -> . string
    (26) value -> . varName ( value_list )
    (27) value -> . varName ( )
    (37) bool -> . opt
    (38) bool -> . value e value
    (39) bool -> . value ou value
    (40) bool -> . value xou value
    (41) calc -> . int
    (42) calc -> . float
    (43) calc -> . - value
    (44) calc -> . value + value
    (45) calc -> . value - value
    (46) calc -> . value * value
    (47) calc -> . value / value
    (48) calc -> . value < value
    (49) calc -> . value > value
    (50) calc -> . value dif value
    (51) calc -> . value eq value
    (52) calc -> . value maieq value
    (53) calc -> . value meneq value
    (54) opt -> . verdadeiro
    (55) opt -> . falso
    (56) opt -> . nao opt

    (               shift and go to state 31
    varName         shift and go to state 32
    string          shift and go to state 35
    int             shift and go to state 37
    float           shift and go to state 38
    -               shift and go to state 39
    verdadeiro      shift and go to state 40
    falso           shift and go to state 41
    nao             shift and go to state 42

    value_list                     shift and go to state 69
    value                          shift and go to state 30
    bool                           shift and go to state 33
    calc                           shift and go to state 34
    opt                            shift and go to state 36

state 32

    (22) value -> varName .
    (26) value -> varName . ( value_list )
    (27) value -> varName . ( )

    e               reduce using rule 22 (value -> varName .)
    ou              reduce using rule 22 (value -> varName .)
    xou             reduce using rule 22 (value -> varName .)
    +               reduce using rule 22 (value -> varName .)
    -               reduce using rule 22 (value -> varName .)
    *               reduce using rule 22 (value -> varName .)
    /               reduce using rule 22 (value -> varName .)
    <               reduce using rule 22 (value -> varName .)
    >               reduce using rule 22 (value -> varName .)
    dif             reduce using rule 22 (value -> varName .)
    eq              reduce using rule 22 (value -> varName .)
    maieq           reduce using rule 22 (value -> varName .)
    meneq           reduce using rule 22 (value -> varName .)
    ;               reduce using rule 22 (value -> varName .)
    ,               reduce using rule 22 (value -> varName .)
    entao           reduce using rule 22 (value -> varName .)
    faca            reduce using rule 22 (value -> varName .)
    )               reduce using rule 22 (value -> varName .)
    ate             reduce using rule 22 (value -> varName .)
    passo           reduce using rule 22 (value -> varName .)
    (               shift and go to state 70


state 33

    (23) value -> bool .

    e               reduce using rule 23 (value -> bool .)
    ou              reduce using rule 23 (value -> bool .)
    xou             reduce using rule 23 (value -> bool .)
    +               reduce using rule 23 (value -> bool .)
    -               reduce using rule 23 (value -> bool .)
    *               reduce using rule 23 (value -> bool .)
    /               reduce using rule 23 (value -> bool .)
    <               reduce using rule 23 (value -> bool .)
    >               reduce using rule 23 (value -> bool .)
    dif             reduce using rule 23 (value -> bool .)
    eq              reduce using rule 23 (value -> bool .)
    maieq           reduce using rule 23 (value -> bool .)
    meneq           reduce using rule 23 (value -> bool .)
    ;               reduce using rule 23 (value -> bool .)
    ,               reduce using rule 23 (value -> bool .)
    entao           reduce using rule 23 (value -> bool .)
    faca            reduce using rule 23 (value -> bool .)
    )               reduce using rule 23 (value -> bool .)
    ate             reduce using rule 23 (value -> bool .)
    passo           reduce using rule 23 (value -> bool .)


state 34
